@@ -11,6 +11,7 @@
 * PaymentExpress: Return token in authorization [ntalbott]
 * Stripe: Support for partial application fee refunds [melari, odorcicd]
 * NMI: Support for recurring flag [duff]
+* SecureNet: Use working live url [duff]
 
 == Version 1.35.1 (July 22, 2013)
 
